# gxr

./: .clang-format  .gitignore  .gitlab-ci.yml  LICENSE  README.md  meson.build  meson_options.txt
.gitlab-ci/: distributions  xrdesktop_ci_signing_key_0x7C668346_public.asc
.gitlab-ci/debian_sid/: changelog  control  copyright  gbp.conf  libgxr-0.15-0.install  libgxr-openxr-0.15-0.install  rules
.gitlab-ci/debian_sid/extra/: prepare-commit-package.sh
.gitlab-ci/dep_install/: install_gulkan.sh  install_openxr.sh
dbus/: gdbus-vr-caller.py  gdbus-vr-listener.c  gdbus-vr-listener.py  gdbus-vr-server.c  meson.build  pydbus-caller.py
doc/: .gitignore  gxr-docs.xml  gxr-sections.txt  meson.build  openvr-glib-docs.xml  openvr-glib-sections.txt
doc/xml/: meson.build
examples/: actions.c  cairo_content.h  clutter.c  clutter_content.h  cogl_cube.c  dmabuf_content.h  glfw_dmabuf.c  glfw_dmabuf_vulkan.c  glfw_pixbuf.c  glfw_pixbuf_vulkan.c  gtk_cairo.c  gtk_clutter.c  gtk_input_synth.c  gtk_offscreen.c  keyboard.c  keyboard_emulator.c  meson.build  overlay_cairo.c  overlay_cairo_animation.c  overlay_cairo_raw.c  overlay_cairo_vulkan.c  overlay_cairo_vulkan_animation.c  overlay_clutter.c  overlay_clutter_vulkan.c  overlay_cogl_texture.c  overlay_dmabuf.c  overlay_dmabuf_vulkan.c  overlay_external_memory.c  overlay_gtk.c  overlay_gtk_overlay_keyboard.c  overlay_gtk_system_keyboard.c  overlay_gtk_vulkan.c  overlay_intersection.c  overlay_management.c  overlay_mesa_dmabuf.c  overlay_models.c  overlay_move.c  overlay_multi.c  overlay_multi_stresstest.c  overlay_paint.c  (+11 more)
examples-ext/: clutter.c  cogl_cube.c  cogl_triangle.c  gdk_list_devices.c  gdk_list_seats.c  gdk_pixbuf_paint.c  gtk_cairo.c  gtk_cairo_animation.c  gtk_input_synth.c  gtk_offscreen.c  gtk_pixbuf.c  meson.build  png_cairo.c  uinput-vrpointer.c  xsendevent_demo.c
examples/cube/: cube.c  gxr-cube.c  meson.build  scene-background.c  scene-cube.c  scene-cube.h  scene-object.c  scene-pointer-tip.h  scene-renderer.c  scene-renderer.h  xrd-scene-background.c  xrd-scene-background.h  xrd-scene-cube.c  xrd-scene-cube.h  xrd-scene-device-manager.c  xrd-scene-device-manager.h  xrd-scene-device.c  xrd-scene-device.h  xrd-scene-model.c  xrd-scene-model.h  xrd-scene-object.c  xrd-scene-object.h  xrd-scene-pointer-tip.c  xrd-scene-pointer-tip.h  xrd-scene-pointer.c  xrd-scene-pointer.h  xrd-scene-renderer.c  xrd-scene-renderer.h
examples/cube/shaders/: cube.frag  meson.build  minimal.frag  minimal.vert  shaders.gresource.xml
examples/demo/: demo-pointer-tip.c  demo-pointer-tip.h  demo-pointer.c  demo-pointer.h  gxr-demo.c  meson.build  renderdoc_app.h  scene-background.c  scene-background.h  scene-controller.c  scene-controller.h  scene-cube.c  scene-cube.h  scene-model.c  scene-model.h  scene-object.c  scene-object.h  scene-pointer-tip.c  scene-pointer-tip.h  scene-pointer.c  scene-pointer.h  scene-renderer.c  scene-renderer.h
examples/demo/shaders/: cube.frag  cube.vert  device_model.frag  device_model.vert  meson.build  pointer.frag  pointer.vert  shaders.gresource.xml  window.frag  window.vert
examples/gjs/: Makefile  README.md  main.ts  tsconfig.json
res/: meson.build  tests.gresource.xml
res/bindings/: actions.json  bindings_knuckles_controller.json  bindings_valve_index_controller.json  bindings_vive_controller.json
res/bindings/openvr/: example_model_actions.json
res/bindings/openxr/: actions.json  bindings_khronos_simple_controller.json  bindings_valve_index_controller.json
scripts/: format.sh
shaders/: meson.build  shaders.gresource.xml  texture.frag  texture.vert
src/: graphene-ext.c  graphene-ext.h  gxr-action-set.c  gxr-action-set.h  gxr-action.c  gxr-action.h  gxr-backend-private.h  gxr-backend.c  gxr-backend.h  gxr-context-private.h  gxr-context.c  gxr-context.h  gxr-controller.c  gxr-controller.h  gxr-device-manager.c  gxr-device-manager.h  gxr-device.c  gxr-device.h  gxr-enums.h  gxr-io.c  gxr-io.h  gxr-manifest.c  gxr-manifest.h  gxr-math.c  gxr-math.h  gxr-overlay-model.c  gxr-overlay-model.h  gxr-overlay.c  gxr-overlay.h  gxr-pointer-tip.c  gxr-pointer-tip.h  gxr-pointer.c  gxr-pointer.h  gxr-time.c  gxr-time.h  gxr-types.h  gxr.h  meson.build  openvr-action-set.c  openvr-action-set.h  (+80 more)
src/openvr/: meson.build  openvr-action-set-private.h  openvr-action-set.c  openvr-action-set.h  openvr-action.c  openvr-action.h  openvr-compositor-private.h  openvr-compositor.c  openvr-compositor.h  openvr-context.c  openvr-context.h  openvr-functions.c  openvr-interface.h  openvr-math.c  openvr-math.h  openvr-model.c  openvr-model.h  openvr-overlay.c  openvr-overlay.h  openvr-system-private.h  openvr-system.c  openvr-system.h
src/openxr/: meson.build  openxr-action-binding.h  openxr-action-set-private.h  openxr-action-set.c  openxr-action-set.h  openxr-action.c  openxr-action.h  openxr-context.c  openxr-context.h  openxr-interface.h  openxr-overlay.c  openxr-overlay.h
tests/: meson.build  test_actions.c  test_context.c  test_gtk_pixbuf.c  test_gxr_context.c  test_io.c  test_matrix_decomposition.c  test_openxr_context.c  test_overlay.c  test_overlay_pixbuf.c  test_pixbuf.c  test_system.c  test_vulkan_client.c  test_vulkan_device.c  test_vulkan_instance.c  test_vulkan_renderer.c  test_vulkan_texture.c  test_vulkan_uploader.c
valgrind/: run.sh
valgrind/suppressions/: glib.supp  mesa.supp  misc.supp
