option('api_doc',
  type: 'boolean',
  value: false,
  description: 'Build API documentation using GTK-Doc'
)

option('backends',
  type: 'array',
  choices: [ 'auto', 'openvr', 'openxr' ],
  value: [ 'auto' ],
  description: 'XR runtime backends to build'
)

option('introspection', type : 'boolean', value : false)
