option('api_doc',
  type: 'boolean',
  value: false,
  description: 'Build API documentation using GTK-Doc'
)

option('cube_renderdoc',
       type: 'boolean',
       value: false,
       description: 'Enable debugging the cube example with renderdoc'
)

option('introspection', type : 'boolean', value : false)

option('examples',
  type: 'boolean',
  value: true,
  description: 'Build the examples'
)

option('tests',
  type: 'boolean',
  value: true,
  description: 'Build the tests'
)
